--- a/app/src/main/res/layout/edit_friends_view.xml
+++ b/app/src/main/res/layout/edit_friends_view.xml
@@ -1,17 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_margin="4dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
         <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:id="@+id/check_image"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/check_image_off"
+            android:src="@android:drawable/checkbox_off_background"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"
+            />
+
+        <ImageView
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:id="@+id/check_image_on"
+            android:visibility="gone"
             android:src="@android:drawable/checkbox_on_background"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="10dp"
             />
 
         <TextView
@@ -21,6 +35,8 @@
             android:textSize="18sp"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="16dp"
+            android:layout_marginTop="7dp"
+            tools:text="Tools text"
             />
 
     </LinearLayout>
